chore: prevent layout shift on library page

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,7 @@
 @import 'tailwindcss';
 
 @theme {
-  --background: #0a0a0a
-  --color-*: initial;
+  --background: #0a0a0a --color-*: initial;
   --color-white: #ffffff;
   --color-black: #000000;
 
@@ -57,6 +56,7 @@
   body {
     max-width: 100vw;
     overflow-x: hidden;
+    scrollbar-gutter: stable;
     color: var(--foreground);
     background: var(--background);
     font-family: "Satoshi", sans-serif;
@@ -66,4 +66,3 @@
     cursor: default;
   }
 }
-
